# investager-service

./: .env  Cargo.toml  README.md
.github/workflows/: service.yml
migrations/2022-04-18-124848_user/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: user.rs
src/models/: user.rs
