[package]
name = "investager-service"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
